Realizando algumas correções.

--- a/css/noticia.css
+++ b/css/noticia.css
@@ -88,3 +88,13 @@ p.rss-title {padding:0.5em;}
     height: 150px;
     float:left;
   }
+
+  #textoinstalacao{
+    width: 300px;
+    text-align: center;
+  }
+  #instalacao{
+    width: 300px;
+    
+
+  }
