--- a/css/new-main.css
+++ b/css/new-main.css
@@ -99,7 +99,7 @@ h1 {
     font-size: 1.5em;
     color: white; }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   h1 {
     width: 60%; }
 
@@ -107,7 +107,7 @@ h1 {
     width: 60%; }
     .banner-texto h1 {
       margin: 20px 0; } }
-@media screen and (min-width: 992px) {
+@media screen and (max-width: 3000px) {
   .main-banner {
     height: 500px;
     padding: 60px 0;
@@ -127,10 +127,10 @@ h1 {
   .banner-texto {
     width: 40%; } }
  
-@media screen and (min-width: 1366px) {
+@media screen and (max-width: 1918px) {
   .main-banner {
     height: 588px;
-    background-size: auto 650px; }
+    background-size: auto 900px; }
 
   .banner-texto h1 {
     font-size: 3.4em; }
@@ -520,3 +520,51 @@ div.box {
   display: block;
 }
 
+.titulo img:hover{
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+
+.navbar-brand img:hover{
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+
+.fa-whatsapp{
+  font-size:20px;
+  color: white;
+  padding-top: 10px;
+  padding-left: 15px;
+}
+.fa-facebook-official{
+  font-size:20px;
+  color: white; 
+  padding-right: 15px;
+   padding-top: 10px; 
+   padding-left:50px;
+
+
+}
+
+#redes :hover{
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+ color:rgba(66, 129, 248, 0.911);
+  font-size: 25px;
+}
+
+.navbar-collapse{
+  color: #FFFFFF;
+
+}
